src/test/ui/associated-types/issue-44153.stderr
error[E0271]: type mismatch resolving `<() as Array>::Element == &()`
  --> $DIR/issue-44153.rs:18:5
   |
LL |     <() as Visit>::visit();
   |     ^^^^^^^^^^^^^^^^^^^^ expected `&()`, found `()`
   |
note: required because of the requirements on the impl of `Visit` for `()`
  --> $DIR/issue-44153.rs:13:10
   |
LL | impl<'a> Visit for () where
   |          ^^^^^     ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
